@@ -23,7 +23,6 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -41,17 +40,17 @@ public class ContributorsService {
     @Cacheable("contributors")
     public List<Contributor> getContributors() {
         GithubContributor[] response = Optional.ofNullable(restTemplate.getForObject(
-                "https://api.github.com/repos/FordLabs/retroquest/contributors",
-                GithubContributor[].class
+            "https://api.github.com/repos/FordLabs/retroquest/contributors",
+            GithubContributor[].class
         )).orElse(new GithubContributor[0]);
 
-        List<GithubContributor> githubContributors = Arrays.asList(response);
+        List<GithubContributor> githubContributors = List.of(response);
 
         return githubContributors.stream()
-                .filter(githubContributor -> !githubContributor.getAccountUrl().endsWith("/invalid-email-address"))
-                .map(githubContributor -> new Contributor(
-                        restTemplate.getForObject(githubContributor.getAvatarUrl(), byte[].class), githubContributor.getAccountUrl()
-                )).collect(toList());
+            .filter(githubContributor -> !githubContributor.getAccountUrl().endsWith("/invalid-email-address"))
+            .map(githubContributor -> new Contributor(
+                restTemplate.getForObject(githubContributor.getAvatarUrl(), byte[].class), githubContributor.getAccountUrl()
+            )).collect(toList());
     }
 
     @CacheEvict(allEntries = true, value = "contributors")
