@@ -21,7 +21,12 @@ import com.fasterxml.jackson.core.type.TypeReference;
 import com.ford.labs.retroquest.api.setup.ApiTestBase;
 import com.ford.labs.retroquest.column.ColumnTitle;
 import com.ford.labs.retroquest.column.ColumnTitleRepository;
-import com.ford.labs.retroquest.thought.*;
+import com.ford.labs.retroquest.thought.CreateThoughtRequest;
+import com.ford.labs.retroquest.thought.MoveThoughtRequest;
+import com.ford.labs.retroquest.thought.Thought;
+import com.ford.labs.retroquest.thought.ThoughtRepository;
+import com.ford.labs.retroquest.thought.UpdateThoughtDiscussedRequest;
+import com.ford.labs.retroquest.thought.UpdateThoughtMessageRequest;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Tag;
@@ -30,14 +35,15 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Example;
 import org.springframework.test.web.servlet.MvcResult;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static java.lang.String.format;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.delete;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.put;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
 @Tag("api")
@@ -68,7 +74,7 @@ class ThoughtApiTest extends ApiTestBase {
 
         mockMvc.perform(put("/api/team/" + teamId + "/thought/" + originalThought.getId() + "/heart")
                 .header("Authorization", getBearerAuthToken()))
-                .andExpect(status().isOk());
+            .andExpect(status().isOk());
 
         Thought savedThought = thoughtRepository.findById(originalThought.getId()).orElseThrow();
         assertThat(savedThought.getHearts()).isEqualTo(2);
@@ -78,7 +84,7 @@ class ThoughtApiTest extends ApiTestBase {
     void should_not_like_thought_unauthorized() throws Exception {
         mockMvc.perform(put("/api/team/" + teamId + "/thought/" + 1 + "/heart")
                 .header("Authorization", "Bearer " + jwtBuilder.buildJwt("unauthorized")))
-                .andExpect(status().isForbidden());
+            .andExpect(status().isForbidden());
     }
 
     @Test
@@ -89,7 +95,7 @@ class ThoughtApiTest extends ApiTestBase {
                 .contentType(APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(new UpdateThoughtDiscussedRequest(true)))
                 .header("Authorization", getBearerAuthToken()))
-                .andExpect(status().isOk());
+            .andExpect(status().isOk());
 
         Thought savedThought = thoughtRepository.findById(originalThought.getId()).orElseThrow();
         assertThat(savedThought.isDiscussed()).isTrue();
@@ -101,7 +107,7 @@ class ThoughtApiTest extends ApiTestBase {
                 .contentType(APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(new UpdateThoughtDiscussedRequest(true)))
                 .header("Authorization", "Bearer " + jwtBuilder.buildJwt("unauthorized")))
-                .andExpect(status().isForbidden());
+            .andExpect(status().isForbidden());
     }
 
     @Test
@@ -113,7 +119,7 @@ class ThoughtApiTest extends ApiTestBase {
                 .contentType(APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(new UpdateThoughtMessageRequest(updatedMessage)))
                 .header("Authorization", getBearerAuthToken()))
-                .andExpect(status().isOk());
+            .andExpect(status().isOk());
 
         var updatedThought = thoughtRepository.findById(originalThought.getId()).orElseThrow();
         assertThat(updatedThought.getMessage()).isEqualTo(updatedMessage);
@@ -127,7 +133,7 @@ class ThoughtApiTest extends ApiTestBase {
                 .contentType(APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(updatedThought))
                 .header("Authorization", "Bearer " + jwtBuilder.buildJwt("unauthorized")))
-                .andExpect(status().isForbidden());
+            .andExpect(status().isForbidden());
     }
 
     @Test
@@ -138,27 +144,28 @@ class ThoughtApiTest extends ApiTestBase {
                 .contentType(APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(changeRequest))
                 .header("Authorization", "Bearer " + jwtBuilder.buildJwt("unauthorized")))
-                .andExpect(status().isForbidden());
+            .andExpect(status().isForbidden());
     }
 
     @Test
     public void should_move_thought_column() throws Exception {
-        ColumnTitle savedColumnTitle = columnTitleRepository.save(new ColumnTitle(null, "cheeseburgers", "CheeseBurgers", teamId));
+        ColumnTitle savedColumnTitle = columnTitleRepository.save(new ColumnTitle(null, "cheeseburgers", "CheeseBurgers",
+            teamId));
         MoveThoughtRequest changeRequest = new MoveThoughtRequest(savedColumnTitle.getId());
         Thought savedThought = thoughtRepository.save(
-                Thought.builder()
-                        .teamId(teamId)
-                        .topic("hamburgers")
-                        .message("message")
-                        .discussed(false)
-                        .hearts(1)
-                        .build()
+            Thought.builder()
+                .teamId(teamId)
+                .topic("hamburgers")
+                .message("message")
+                .discussed(false)
+                .hearts(1)
+                .build()
         );
 
         mockMvc.perform(put(format("%s/thought/%d/topic", BASE_API_URL, savedThought.getId()))
-                .contentType(APPLICATION_JSON)
-                .content(objectMapper.writeValueAsString(changeRequest))
-                .header("Authorization", getBearerAuthToken())
+            .contentType(APPLICATION_JSON)
+            .content(objectMapper.writeValueAsString(changeRequest))
+            .header("Authorization", getBearerAuthToken())
         ).andExpect(status().isOk());
 
         Thought updatedThought = thoughtRepository.findById(savedThought.getId()).orElseThrow(Exception::new);
@@ -171,31 +178,32 @@ class ThoughtApiTest extends ApiTestBase {
 
     @Test
     void should_return_all_thoughts_by_team_id() throws Exception {
-        List<Thought> expectedThoughts = Arrays.asList(
-                Thought.builder().teamId(teamId).message("hello").build(),
-                Thought.builder().teamId(teamId).message("goodbye").build());
+        List<Thought> expectedThoughts = List.of(
+            Thought.builder().teamId(teamId).message("hello").build(),
+            Thought.builder().teamId(teamId).message("goodbye").build());
 
         List<Thought> persistedExpectedThoughts = thoughtRepository.saveAll(expectedThoughts);
 
         MvcResult result = mockMvc.perform(get(String.join("", "/api/team/", teamId, "/thoughts"))
                 .contentType(APPLICATION_JSON)
                 .header("Authorization", getBearerAuthToken()))
-                .andExpect(status().isOk())
-                .andReturn();
+            .andExpect(status().isOk())
+            .andReturn();
 
-        List<Thought> actualThoughts = objectMapper.readValue(result.getResponse().getContentAsByteArray(), new TypeReference<>() {
-        });
+        List<Thought> actualThoughts = objectMapper.readValue(result.getResponse().getContentAsByteArray(),
+            new TypeReference<>() {
+            });
 
         assertThat(actualThoughts)
-                .usingRecursiveComparison()
-                .isEqualTo(persistedExpectedThoughts);
+            .usingRecursiveComparison()
+            .isEqualTo(persistedExpectedThoughts);
     }
 
     @Test
     void should_delete_thoughts_by_thought_id() throws Exception {
-        List<Thought> thoughtsToSave = Arrays.asList(
-                Thought.builder().teamId(teamId).message("hello").build(),
-                Thought.builder().teamId(teamId).message("goodbye").build());
+        List<Thought> thoughtsToSave = List.of(
+            Thought.builder().teamId(teamId).message("hello").build(),
+            Thought.builder().teamId(teamId).message("goodbye").build());
 
         List<Thought> persistedThoughts = thoughtRepository.saveAll(thoughtsToSave);
 
@@ -208,7 +216,7 @@ class ThoughtApiTest extends ApiTestBase {
         mockMvc.perform(delete(String.format("%s/thought/%d", BASE_API_URL, thoughtToDelete.getId()))
                 .contentType(APPLICATION_JSON)
                 .header("Authorization", getBearerAuthToken()))
-                .andExpect(status().isOk());
+            .andExpect(status().isOk());
 
         assertThat(thoughtRepository.exists(Example.of(thoughtToDelete))).isFalse();
         assertThat(thoughtRepository.exists(Example.of(thoughToKeep))).isTrue();
@@ -219,26 +227,26 @@ class ThoughtApiTest extends ApiTestBase {
         mockMvc.perform(delete(String.format("%s/thought/%d", BASE_API_URL, 1))
                 .contentType(APPLICATION_JSON)
                 .header("Authorization", "Bearer " + jwtBuilder.buildJwt("unauthorized")))
-                .andExpect(status().isForbidden());
+            .andExpect(status().isForbidden());
     }
 
     @Test
     void should_create_thought() throws Exception {
         var createThoughtRequest = new CreateThoughtRequest(
-                null,
-                "Hello",
-                0,
-                "happy",
-                false,
-                null,
-                null
+            null,
+            "Hello",
+            0,
+            "happy",
+            false,
+            null,
+            null
         );
 
         mockMvc.perform(post(String.join("", "/api/team/", teamId, "/thought"))
                 .contentType(APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(createThoughtRequest))
                 .header("Authorization", getBearerAuthToken()))
-                .andExpect(status().isCreated());
+            .andExpect(status().isCreated());
 
         var savedThoughts = thoughtRepository.findAllByTeamId(teamId);
         assertThat(savedThoughts).hasSize(1);
@@ -250,28 +258,28 @@ class ThoughtApiTest extends ApiTestBase {
     @Test
     public void should_not_create_thought_unauthorized() throws Exception {
         var createThoughtRequest = new CreateThoughtRequest(
-                null,
-                "Hello",
-                0,
-                "happy",
-                false,
-                null,
-                null
+            null,
+            "Hello",
+            0,
+            "happy",
+            false,
+            null,
+            null
         );
 
         mockMvc.perform(post(String.join("", "/api/team/", teamId, "/thought"))
                 .contentType(APPLICATION_JSON)
                 .content(objectMapper.writeValueAsString(createThoughtRequest))
                 .header("Authorization", "Bearer " + jwtBuilder.buildJwt("unauthorized")))
-                .andExpect(status().isForbidden());
+            .andExpect(status().isForbidden());
     }
 
     @Test
     void should_get_thoughts_on_same_team() throws Exception {
-        List<Thought> savedThoughts = Arrays.asList(
-                Thought.builder().message("message 1").teamId(teamId).build(),
-                Thought.builder().message("message 2").teamId(teamId).build(),
-                Thought.builder().message("message 2").teamId("team 2").build()
+        List<Thought> savedThoughts = List.of(
+            Thought.builder().message("message 1").teamId(teamId).build(),
+            Thought.builder().message("message 2").teamId(teamId).build(),
+            Thought.builder().message("message 2").teamId("team 2").build()
         );
 
         thoughtRepository.saveAll(savedThoughts);
@@ -279,8 +287,8 @@ class ThoughtApiTest extends ApiTestBase {
         MvcResult result = mockMvc.perform(get(BASE_API_URL + "/thoughts")
                 .contentType(APPLICATION_JSON)
                 .header("Authorization", getBearerAuthToken()))
-                .andExpect(status().isOk())
-                .andReturn();
+            .andExpect(status().isOk())
+            .andReturn();
 
         Thought[] response = objectMapper.readValue(result.getResponse().getContentAsByteArray(), Thought[].class);
 
@@ -289,8 +297,8 @@ class ThoughtApiTest extends ApiTestBase {
 
     @Test
     void should_not_get_thoughts_unauthorized() throws Exception {
-        List<Thought> savedThoughts = Collections.singletonList(
-                Thought.builder().message("message 1").teamId(teamId).build()
+        List<Thought> savedThoughts = List.of(
+            Thought.builder().message("message 1").teamId(teamId).build()
         );
 
         thoughtRepository.saveAll(savedThoughts);
@@ -298,6 +306,6 @@ class ThoughtApiTest extends ApiTestBase {
         mockMvc.perform(get(BASE_API_URL + "/thoughts")
                 .contentType(APPLICATION_JSON)
                 .header("Authorization", "Bearer " + jwtBuilder.buildJwt("unauthorized")))
-                .andExpect(status().isForbidden());
+            .andExpect(status().isForbidden());
     }
 }
